--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -6,8 +6,8 @@
 
 body {
   font-family: 'Lora';
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 23, 15, 0.65))), url("../img/bg.jpg");
-  background: linear-gradient(rgba(47, 23, 15, 0.65)), url("../img/bg.jpg");
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 23, 15, 0.65))), url("../img/image.png");
+  background: linear-gradient(rgba(47, 23, 15, 0.65)), url("../img/image.png");
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -120,7 +120,7 @@ p {
 
 @media (min-width: 992px) {
   .intro .intro-img {
-    width: 75%;
+    width: 45%;
     float: right;
   }
   .intro .intro-text {
@@ -171,9 +171,10 @@ p {
   .about-heading .about-heading-img {
     position: relative;
     z-index: 0;
+    width: 50%;
   }
   .about-heading .about-heading-content {
-    margin-top: -5rem;
+    /*margin-top: -5rem;*/
     position: relative;
     z-index: 1;
   }
@@ -254,4 +255,16 @@ p {
 
 .font-weight-light {
   font-weight: 100 !important;
+}
+
+.cursor {
+
+   url('/css/cursor.cur'), auto;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
